# fighting_fantasy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/fighting_fantasy/: 02-a-cidadela-do-caos.m4  03-a-masmorra-da-morte.m4  04-criatura-selvagem.m4  05-a-cidade-dos-ladrões.m4  06-a-cripta-do-feiticeiro.m4  07-a-mansão-do-inferno.m4  08-a-floresta-da-destruição.m4  09-as-cavernas-da-bruxa-da-neve.m4  10-o-desafio-dos-campeões.m4  11-exércitos-da-morte.m4  12-retorno-a-montanha-de-fogo.m4  13-a-ilha-do-rei-lagarto.m4  14-encontro-marcado-com-o-m.e.d.o.m4  15-a-nave-espacial-traveller.m4
